In progress update: - add news - add products

--- a/src/main/resources/templates/about/detail.html
+++ b/src/main/resources/templates/about/detail.html
@@ -9,7 +9,16 @@
     <header th:insert="~{blocks/header}"></header>
     <nav th:insert="~{blocks/nav}"></nav>
     <main>
-
+      <b>
+        <p>Бар Стоп кран</p>
+        <p>Новотушинский пр., 8к1</p>
+        <p>◾24 крана классики, крафта и импорта</p>
+        <p>◾ламповая атмосфера</p>
+        <p>◾место для друзей и их друзей</p>
+        <p>Тот самый бар "на районе", куда приходишь, как к себе домой</p>
+      </b>
+      <br>
+      <hr>
     </main>
     <footer th:insert="~{blocks/footer}"></footer>
   </body>
