--- a/src/main/resources/templates/catalog/list.html
+++ b/src/main/resources/templates/catalog/list.html
@@ -9,16 +9,32 @@
         <header th:insert="~{blocks/header}"></header>
         <nav th:insert="~{blocks/nav}"></nav>
         <main>
+            <h2 th:text="${category.getName()}"></h2>
+            <p th:text="${category.getDescription()}"></p>
+            <a th:href="@{/catalog/menu}">Вернуться</a>
+
+            <div>
+                <a th:href="@{/catalog/menu/list/0}" th:if="${pageNumber}!=0 and ${pageNumber}!=1">1 ...</a>
+
+                <a th:href="@{/catalog/menu/list/{pageNumber}(pageNumber=${pageNumber-1})}" th:text="${pageNumber}" th:if="${pageNumber} != 0"></a>
+                <a th:href="@{/catalog/menu/list/{pageNumber}(pageNumber=${pageNumber})}" th:text="${pageNumber+1}"></a>
+                <a th:href="@{/catalog/menu/list/{pageNumber}(pageNumber=${pageNumber+1})}" th:text="${pageNumber+2}" th:if="${pageNumber} != ${pageTotal-1}"></a>
+
+                <a th:href="@{/catalog/menu/list/{pageNumber}(pageNumber=${pageTotal-1})}" th:text="'... ' + ${pageTotal}" th:if="${pageNumber} != ${pageTotal-1} and ${pageNumber} != ${pageTotal-2}"></a>
+            </div>
+
             <div th:each="product : ${products}">
                 <hr>
-                <img th:src="'data:image/png;base64,' + ${product.getImage()}" width="100px" height="100px"/>
-                <p>
-                    <b>
-                        <span th:text="${product.getName()}"></span>
-                        <span th:text="'Coast: ' + ${product.getCoast()}"></span>
-                    </b>
-                </p>
-                <p th:text="${product.getDescription()}"></p>
+                <a th:href="@{/catalog/{menuNum}/{productNum}(menuNum=${category.getId()},productNum=${product.getId()})}">
+                    <img th:src="'data:image/png;base64,' + ${product.getImage()}" width="100px" height="100px"/>
+                    <p>
+                        <b>
+                            <span th:text="${product.getName()}"></span>
+                            <span th:text="'Coast: ' + ${product.getCoast()}"></span>
+                        </b>
+                    </p>
+                    <p th:text="${product.getDescription()}"></p>
+                </a>
                 <hr>
             </div>
 
@@ -31,6 +47,7 @@
 
                 <a th:href="@{/catalog/menu/list/{pageNumber}(pageNumber=${pageTotal-1})}" th:text="'... ' + ${pageTotal}" th:if="${pageNumber} != ${pageTotal-1} and ${pageNumber} != ${pageTotal-2}"></a>
             </div>
+            <a th:href="@{/catalog/menu}">Вернуться</a>
         </main>
         <footer th:insert="~{blocks/footer}"></footer>
     </body>
