--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,7 +9,34 @@
         <header th:insert="~{blocks/header}"></header>
         <nav th:insert="~{blocks/nav}"></nav>
         <main>
+            <h1>Новости Бара</h1>
+            <div>
+                <a th:href="@{/news/page/0}" th:if="${pageNumber}!=0 and ${pageNumber}!=1">1 ...</a>
 
+                <a th:href="@{/news/page/{pageNumber}(pageNumber=${pageNumber-1})}" th:text="${pageNumber}" th:if="${pageNumber} != 0"></a>
+                <a th:href="@{/news/page/{pageNumber}(pageNumber=${pageNumber})}" th:text="${pageNumber+1}"></a>
+                <a th:href="@{/news/page/{pageNumber}(pageNumber=${pageNumber+1})}" th:text="${pageNumber+2}" th:if="${pageNumber} != ${pageTotal-1}"></a>
+
+                <a th:href="@{/news/page/{pageNumber}(pageNumber=${pageTotal-1})}" th:text="'... ' + ${pageTotal}" th:if="${pageNumber} != ${pageTotal-1} and ${pageNumber} != ${pageTotal-2}"></a>
+            </div>
+            <div th:each="news : ${newsList}">
+                <hr>
+                <a th:href="@{/news/{id}(id=${news.getId()})}">
+                    <img th:src="'data:image/png;base64,' + ${news.getImage()}" width="200px" height="200px"/>
+                    <h2 th:text="${news.getName()}"></h2>
+                    <p th:text="${news.getAnnotation()}"></p>
+                </a>
+                <hr>
+            </div>
+            <div>
+                <a th:href="@{/news/page/0}" th:if="${pageNumber}!=0 and ${pageNumber}!=1">1 ...</a>
+
+                <a th:href="@{/news/page/{pageNumber}(pageNumber=${pageNumber-1})}" th:text="${pageNumber}" th:if="${pageNumber} != 0"></a>
+                <a th:href="@{/news/page/{pageNumber}(pageNumber=${pageNumber})}" th:text="${pageNumber+1}"></a>
+                <a th:href="@{/news/page/{pageNumber}(pageNumber=${pageNumber+1})}" th:text="${pageNumber+2}" th:if="${pageNumber} != ${pageTotal-1}"></a>
+
+                <a th:href="@{/news/page/{pageNumber}(pageNumber=${pageTotal-1})}" th:text="'... ' + ${pageTotal}" th:if="${pageNumber} != ${pageTotal-1} and ${pageNumber} != ${pageTotal-2}"></a>
+            </div>
         </main>
         <footer th:insert="~{blocks/footer}"></footer>
     </body>
