--- a/src/main/resources/templates/news/information.html
+++ b/src/main/resources/templates/news/information.html
@@ -11,6 +11,7 @@
     <main>
       <div>
         <hr>
+        <p th:text="${news.getPlacedAt()}"></p>
         <img th:src="'data:image/png;base64,' + ${news.getImage()}" width="300px" height="300px"/>
         <h2 th:text="${news.getName()}"></h2>
         <p th:text="${news.getContent()}"></p>
