--- a/src/main/resources/templates/blocks/nav.html
+++ b/src/main/resources/templates/blocks/nav.html
@@ -4,5 +4,6 @@
         <li><a th:href="@{/catalog/menu}">Меню</a></li>
         <li><a th:href="@{/contact}">Наши контакты</a></li>
         <li><a th:href="@{/about}">О нас</a></li>
+        <li><a th:href="@{/admin}">Админ</a></li>
     </ul>
 </div>
