--- a/src/main/resources/templates/admin/news-maker.html
+++ b/src/main/resources/templates/admin/news-maker.html
@@ -11,19 +11,28 @@
         <main>
             <div>
                 <hr>
-                <h1>Работа с новостями</h1>
+                <h2>Работа с новостями</h2>
                 <hr>
             </div>
             <div>
+                <a th:href="@{/admin}">Вернуться</a>
+                <hr>
                 <form th:method="POST" th:action="@{/admin/news/add}" th:object="${news}" enctype="multipart/form-data">
                     <label for="file">Изображение: </label>
                     <input type="file" accept="image/png" id="file" name="file"><br>
+
                     <label for="name">Название новости: </label>
-                    <input type="text" id="name" th:field="*{name}"><br>
+                    <input type="text" id="name" th:field="*{name}">
+                    <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}" style="color: red">Name error</span><br>
+
                     <label for="annotation">Короткая аннотация: </label>
-                    <input type="text" id="annotation" th:field="*{annotation}"><br>
+                    <input type="text" id="annotation" th:field="*{annotation}">
+                    <span th:if="${#fields.hasErrors('annotation')}" th:errors="*{annotation}" style="color: red">Annotation error</span><br>
+
                     <label for="content">Содержание: </label>
-                    <textarea id="content" cols="40" rows="20" th:field="*{content}"/><br>
+                    <textarea id="content" cols="40" rows="20" th:field="*{content}"/>
+                    <span th:if="${#fields.hasErrors('content')}" th:errors="*{content}" style="color: red">Content error</span><br>
+
                     <input type="submit" value="Подтвердить">
                 </form>
                 <hr>
