--- a/src/main/resources/templates/catalog/edit.html
+++ b/src/main/resources/templates/catalog/edit.html
@@ -31,6 +31,15 @@
                     <input type="number" th:field="*{coast}" id="coast">
                     <span th:if="${#fields.hasErrors('coast')}" th:errors="*{coast}" style="color: red">Coast error</span><br>
 
+                    <label for="select">Категория: </label>
+                    <select id="select" name="select">
+                        <option
+                                th:each="category : ${categoryList}"
+                                th:text="${category.getName()}"
+                                th:value="${category.getId()}"
+                        ></option>
+                    </select>
+
                     <input type="submit" value="Редактировать">
                 </form>
                 <hr>
