--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -1,3 +1,11 @@
-<div>
-  <h1>Бар "Стоп Кран"</h1>
+<div class="container">
+  <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+    <div class="row md-4"></div>
+    <div class="row md-4">
+      <a th:href="@{/}" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+        <img th:src="'data:image/png;base64,' + ${logo}" width="100px" height="100px"/>
+      </a>
+    </div>
+    <div class="row md-4"></div>
+  </header>
 </div>
