--- a/src/main/resources/templates/admin/catalog-maker.html
+++ b/src/main/resources/templates/admin/catalog-maker.html
@@ -2,10 +2,13 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title th:text="${title}">Main Page</title>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     </head>
 
-    <body>
+    <body class="bg-dark">
         <header th:insert="~{blocks/header}"></header>
         <nav th:insert="~{blocks/nav}"></nav>
         <main>
@@ -33,23 +36,25 @@
                 </form>
                 <hr>
             </div>
-            <div>
+            <div th:if="${categories.size()} != 0">
                 <hr>
                 <h2>Удаление категории</h2>
                 <p>Все продукты в категории будут перемещены на склад</p>
                 <form th:method="POST" th:action="@{/admin/catalog/delete}">
                     <select id="select" name="select">
                         <option
-                        th:each="category : ${categories}"
-                        th:text="${category.getName()}"
-                        th:value="${category.getId()}"
-                        ></option>
+                            th:each="category : ${categories}"
+                            th:text="${category.getName()}"
+                            th:value="${category.getId()}">
+                        </option>
                     </select>
                     <input type="submit" value="Удалить">
+                    <input type="submit" value="Редактировать" th:formaction="'/admin/catalog/edit'">
                 </form>
                 <hr>
             </div>
         </main>
         <footer th:insert="~{blocks/footer}"></footer>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     </body>
 </html>
