--- a/src/main/resources/templates/blocks/footer.html
+++ b/src/main/resources/templates/blocks/footer.html
@@ -1,5 +1,28 @@
-<div>
-    <hr>
-    <p>Бар "Стоп Кран" открыт до 00:00 по адресу Новотушинский пр., 8, корп. 1, телефон для справок +7 (916) 854-09-28</p>
-    <p>Сайт разработан на Java и Spring Framework</p>
+<div class="container">
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top border-light">
+        <div class="col-md-4 d-flex align-items-center">
+            <a th:href="@{/}" class="mb-3 me-2 mb-md-0 text-light text-decoration-none lh-1">
+                <i class="bi bi-box" style="font-size: 20px"></i>
+            </a>
+            <span class="mb-3 mb-md-0 text-light">© 2023 Стоп Кран Бар</span>
+        </div>
+
+        <div class="col-md-4 d-flex align-items-center text-light">
+            <p>
+                Бар "Стоп Кран" открыт до 00:00 по адресу Новотушинский пр., 8, корп. 1, телефон для справок +7 (916) 854-09-28
+                <br>
+                <span style="font-size: 12px">
+                    Сайт разработан на Java и Spring Framework
+                </span>
+            </p>
+        </div>
+
+        <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+            <li class="ms-3">
+                <a class="text-body-secondary" href="https://vk.com/the.stopkran">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 30 30" fill="none"><path d="M0 14.4C0 7.61 0 4.22 2.1 2.1 4.23 0 7.62 0 14.4 0h1.2c6.79 0 10.18 0 12.3 2.1C30 4.23 30 7.62 30 14.4v1.2c0 6.79 0 10.18-2.1 12.3C25.77 30 22.38 30 15.6 30h-1.2c-6.79 0-10.18 0-12.3-2.1C0 25.77 0 22.38 0 15.6v-1.2Z" fill="#07F"/><path d="M15.96 21.61c-6.84 0-10.74-4.68-10.9-12.48H8.5c.11 5.72 2.63 8.14 4.63 8.64V9.13h3.23v4.93c1.97-.21 4.05-2.46 4.75-4.94h3.22a9.53 9.53 0 0 1-4.38 6.23 9.87 9.87 0 0 1 5.13 6.26h-3.55c-.76-2.37-2.66-4.21-5.17-4.46v4.46h-.39Z" fill="#fff"/></svg>
+                </a>
+            </li>
+        </ul>
+    </footer>
 </div>
