--- a/src/main/resources/templates/contact/info.html
+++ b/src/main/resources/templates/contact/info.html
@@ -2,14 +2,17 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no, maximum-scale=1" />
+    <!--<meta name="viewport" content="initial-scale=1.0, user-scalable=no, maximum-scale=1" />-->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title th:text="${title}">Main Page</title>
     <link href="../static/css/info.css" th:href="@{/css/info.css}" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://api-maps.yandex.ru/2.1/?apikey=7c13cf7d-c937-4ca6-8021-145ac16bdcae&lang=ru_RU" type="text/javascript"></script>
     <script type="text/javascript" th:src="@{/js/map.js}"></script>
   </head>
 
-  <body>
+  <body class="bg-dark">
     <header th:insert="~{blocks/header}"></header>
     <nav th:insert="~{blocks/nav}"></nav>
     <main>
@@ -20,5 +23,6 @@
       <div id="map"></div>
     </main>
     <footer th:insert="~{blocks/footer}"></footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
